prueba de vs code

--- a/00-CourseIntroduction.ipynb
+++ b/00-CourseIntroduction.ipynb
@@ -164,7 +164,9 @@
    "id": "d96791e2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#test"
+   ]
   }
  ],
  "metadata": {
