--- a/01a_test_your_setup.ipynb
+++ b/01a_test_your_setup.ipynb
@@ -6,13 +6,13 @@
    "metadata": {},
    "source": [
     "<img src='./fig/vertical_COMILLAS_COLOR.jpg' style= 'width:70mm'>\n",
-    "<h1 style='font-family: Optima;color:#ecac00'>\n",
+    "<h2 style='font-family: Optima;color:#ecac00'>\n",
     "Máster en Big Data. Tecnología y Analítica Avanzada (MBD).\n",
-    "</h1>\n",
-    "\n",
-    "<h1 style='font-family: Optima;color:#ecac00'>\n",
-    "Fundamentos Matemáticos del Análisis de Datos (FMAD). 2022-2023.\n",
-    "</h1>\n",
+    "</h2>\n",
+    "</br>\n",
+    "<h2 style='font-family: Optima;color:#ecac00'>\n",
+    "Introducción al Análisis Estadístico con Lenguajes de Programación para Machine Learning (IAELPML). 2023-2024.\n",
+    "</h2>\n",
     "\n",
     "<h1 style='font-family: Optima;color:#ecac00'>\n",
     "01a Python Setup Checks\n",
@@ -35,7 +35,7 @@
    "source": [
     "## Check your Conda environment and Python version\n",
     "\n",
-    "Look for the active environment in the output of the following command. It should be `fmad`. Also check the Python version you are using."
+    "Look for the active environment in the output of the following command. It should be `IAELPML`. Also check the Python version you are using."
    ]
   },
   {
@@ -511,7 +511,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gapminder = pd.read_csv('data/gapminder.csv', index_col = 0)\n",
+    "gapminder = pd.read_csv('data/gapminder.txt', index_col = 0)\n",
     "print(gapminder.head())\n",
     "gdp_cap = gapminder.iloc[:, -1].tolist()\n",
     "life_exp = gapminder.iloc[:, -2].tolist()\n",
@@ -577,11 +577,7 @@
    "id": "25f39dc5",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from ipyleaflet import Map\n",
-    "\n",
-    "Map(center=[40.43000779017108, -3.7125999200687105], zoom=17)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -616,7 +612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.17"
   },
   "toc": {
    "base_numbering": 1,
