Dealing with TOC numbers in notebook headings

--- a/01-Software_Setup_Windows_Version.ipynb
+++ b/01-Software_Setup_Windows_Version.ipynb
@@ -6,17 +6,18 @@
    "metadata": {},
    "source": [
     "<img src='./fig/vertical_COMILLAS_COLOR.jpg' style= 'width:70mm'>\n",
-    "<h2 style='font-family: Optima;color:#ecac00'>\n",
-    "Máster en Big Data. Tecnología y Analítica Avanzada (MBD).\n",
-    "</h2>\n",
     "</br>\n",
-    "<h2 style='font-family: Optima;color:#ecac00'>\n",
-    "Introducción al Análisis Estadístico con Lenguajes de Programación para Machine Learning (IAELPML). 2023-2024.\n",
-    "</h2>\n",
     "\n",
+    "$\\quad$\n",
     "<h1 style='font-family: Optima;color:#ecac00'>\n",
-    "Software Setup, Windows Version\n",
-    "</h1>\n"
+    "Máster en Big Data. Tecnología y Analítica Avanzada (MBD).\n",
+    "</h1>\n",
+    "<h1 style='font-family: Optima;color:#ecac00'>\n",
+    "Introducción al Análisis Estadístico con Lenguajes de Programación para Machine Learning (IAELPML). 2023-2024.\n",
+    "</h1>\n",
+    "<h1 style='font-family: Optima;color:#ecac00'>\n",
+    "01a Software Setup, Windows Version\n",
+    "</h1>"
    ]
   },
   {
@@ -471,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.8.13"
   },
   "toc": {
    "base_numbering": 1,
