Updated both Software_Setup files for Mac and Windows.

--- a/01-Software_Setup_Windows_Version.ipynb
+++ b/01-Software_Setup_Windows_Version.ipynb
@@ -377,7 +377,7 @@
     "\n",
     "+ We have described how to set up your Windows machine using Anaconda Python, but you should know that there are other alternatives. For example, if you want a light weight setup without all the additional tools included with a full Ananconda setup, then you can consider [Miniconda](https://docs.conda.io/en/latest/miniconda.html). According to its official web site, miniconda is *a small, bootstrap version of Anaconda that includes only conda, Python, the packages they depend on, and a small number of other useful packages.* \n",
     "+ Both Anaconda and Miniconda are maintained by a commercial company, also called Anaconda. If you prefer a similar community based system you can take a look at [Miniforge](https://github.com/conda-forge/miniforge/#download), which is strongly associated with [Conda-Forge](https://conda-forge.org), a community driven GitHub organization containing repositories of conda recipes.\n",
-    "+ Finally, we want to mention the standard Python versions from [www.python.org](https://www.python.org). Using this Python version requires a different management system for Python environments and libraries. We won't be using this system in this course, but if for some reason you must use it, please let us know in advance so that we can provide you with the information you will need. I"
+    "+ Finally, we want to mention the standard Python versions from [www.python.org](https://www.python.org). Using this Python version requires a different management system for Python environments and libraries. We won't be using this system in this course, but if for some reason you must use it, please let us know in advance so that we can provide you with the information you will need. "
    ]
   },
   {
@@ -472,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.17"
   },
   "toc": {
    "base_numbering": 1,
