--- a/01M-Software_Setup_MacOS_Version.ipynb
+++ b/01M-Software_Setup_MacOS_Version.ipynb
@@ -6,14 +6,15 @@
    "metadata": {},
    "source": [
     "<img src='./fig/vertical_COMILLAS_COLOR.jpg' style= 'width:70mm'>\n",
-    "<h2 style='font-family: Optima;color:#ecac00'>\n",
-    "Máster en Big Data. Tecnología y Analítica Avanzada (MBD).\n",
-    "</h2>\n",
     "</br>\n",
-    "<h2 style='font-family: Optima;color:#ecac00'>\n",
-    "Fundamentos Matemáticos del Análisis de Datos (FMAD). 2022-2023.\n",
-    "</h2>\n",
     "\n",
+    "$\\quad$\n",
+    "<h1 style='font-family: Optima;color:#ecac00'>\n",
+    "Máster en Big Data. Tecnología y Analítica Avanzada (MBD).\n",
+    "</h1>\n",
+    "<h1 style='font-family: Optima;color:#ecac00'>\n",
+    "Introducción al Análisis Estadístico con Lenguajes de Programación para Machine Learning (IAELPML). 2023-2024.\n",
+    "</h1>\n",
     "<h1 style='font-family: Optima;color:#ecac00'>\n",
     "Software Setup, MacOS Version\n",
     "</h1>  "
@@ -54,13 +55,13 @@
     "+ You should create a **specific folder** for this course under your user folder. Under MacOS a typical location\n",
     "could be something like (the ellipsis represents possible intermediate folders):\n",
     " \n",
-    "    `/Users/your_user_folder/.../MasterBD/FMAD/`  \n",
+    "    `/Users/your_user_folder/.../MasterBD/IAE/`  \n",
     "\n",
     "\n",
-    "+ **The folder that you have created will always be referred to in these notes as the Course Folder**. In the above examples we named it `FMAD` but you can give it any name you want. As usual, it is a good idea to keep it short and meaningful (and free of spaces, unusual characters, etc.) \n",
+    "+ **The folder that you have created will always be referred to in these notes as the Course Folder**. In the above example we named it `IAE` but you can give it any name you want. As usual, it is a good idea to keep it short and meaningful (and free of spaces, unusual characters, etc.) \n",
     " \n",
     "+ We will be using Git and [GitHub](https://github.com) repositories for the Course Notes and Assignments. In particular, the following repository will be used to share all the common course material:  \n",
-    "    [https://github.com/mbdfmad/fmad2223](https://github.com/mbdfmad/fmad2223)  \n",
+    "    [https://github.com/mbdfmad/IAELPML](https://github.com/mbdfmad/IAELPML)  \n",
     "  In the next section we will tell you how to get a local copy of this repository to your computer. For the time being you can browse the contents of the repository, but do not download it yet! This repository **will always be referred to in these notes as the Common Repository**. Soon you will be also using your *personal repository* and it is important to get the distinction and name conventions right from the beginning. "
    ]
   },
@@ -117,13 +118,13 @@
     "\n",
     "+ In that folder run the following command:\n",
     "\n",
-    "    `git clone https://github.com/mbdfmad/fmad2223.git`\n",
+    "    `git clone https://github.com/mbdfmad/IAELPML.git`\n",
     "    \n",
-    "  Git will begin cloning (downloading) the contents of the repo to a folder named `fmad2223` in your computer. The process looks like this (the prompt and number of cloned objects will surely be greater in your case):\n",
+    "  Git will begin cloning (downloading) the contents of the repo to a folder named `IAELPML` in your computer. The process looks like this (the prompt and number of cloned objects will surely be greater in your case):\n",
     "  \n",
     "    <img src=\"fig/008-CloningCourseRepoMacOS.png\" width=80%/>\n",
     "  \n",
-    "  The `fmad2223` folder will then be a subfolder of the *Course Folder*. You should consider this `fmad2223` folder as a *read-only* folder. You will soon see how to update its contents as the course progresses, but **you are not expected to directly modify the contents of the `fmad2223` folder** (and you shouldn't). You can *copy* any object from this folder (e.g. the code examples that we will provide) to other locations in your computer if you want to make changes. Finally, if you are a seasoned Git user you can opt for a fork of the repo instead of cloning it. "
+    "  The `IAELPML` folder will then be a subfolder of the *Course Folder*. You should consider this `IAELPML` folder as a *read-only* folder. You will soon see how to update its contents as the course progresses, but **you are not expected to directly modify the contents of the `IAELPML` folder** (and you shouldn't). You can *copy* any object from this folder (e.g. the code examples that we will provide) to other locations in your computer if you want to make changes. Finally, if you are a seasoned Git user you can opt for a fork of the repo instead of cloning it. "
    ]
   },
   {
@@ -137,12 +138,12 @@
     "\n",
     "+ **This will be very important for our workflow in the lectures of the course.** So make sure to get it right, and ask for help soon if you need it. Every work session for this course will begin with the following ritual:\n",
     "    + Open a *Terminal*.\n",
-    "    + Navigate to your local `fmad2223` folder. Do not confuse this with the *Course Folder*.\n",
+    "    + Navigate to your local `IAELPML` folder. Do not confuse this with its parent folder, the *Course Folder*; in my case the parent course folder is called `IAE`, but in your case the name could be different. The repository folder name should however be always `IAELPML`.\n",
     "    + Run `git status` to check that everything is ok. \n",
     "    + Run `git pull origin main`. Depending on the update status of your local copy of the repo you will either download the new contents from the repo at GitHub or you will receive a message saying that you are `Already up to  date`.  \n",
-    "    + If you are going to modify any of the files in `fmad2223` and you want to keep the changes, **make sure to copy the files first to a different folder outside of the common repository.** Just create as many additional subfolders of the course folder as you see fit, but make so outside of the common repository. \n",
+    "    + If you are going to modify any of the files in `IAELPML` and you want to keep the changes, **make sure to copy the files first to a different folder outside of the common repository.** Just create as many additional subfolders of the course folder as you see fit, but make so outside of the common repository. \n",
     "    \n",
-    "  Don't worry too much, however. You cannot break anything, since you won't have write permissions for this GitHub repo. Worst case scenario, you can (backup your local files and) delete the `fmad2223` folder and clone it again to get the latest contents."
+    "  Don't worry too much, however. You cannot break anything, since you won't have write permissions for this GitHub repo. Worst case scenario, you can (backup your local files and) delete the `IAELPML` folder and clone it again to get the latest contents."
    ]
   },
   {
@@ -153,9 +154,9 @@
     "    \n",
     "### Setting up a local Git configuration for the Common Repository\n",
     "\n",
-    "+ Using still the terminal, change into the `fmad2223` folder and set your local Git configuration with these commands (the first one is the folder change from the *Course Folder* to `fmad2223`):\n",
+    "+ Using still the terminal, change into the `IAELPML` folder and set your local Git configuration with these commands (the first one is the folder change from the *Course Folder* to `IAELPML`):\n",
     "\n",
-    "  `cd fmad2223`  \n",
+    "  `cd IAELPML`  \n",
     "  `git config --local user.name 'replace_this_with_your_GitHub_username'`  \n",
     "  `git config --local user.email 'replace_this_with_your_university_email'`  \n",
     "  `git config --global init.defaultBranch main`\n",
@@ -205,13 +206,13 @@
     "    + [A Guide to Python’s Virtual Environments](https://towardsdatascience.com/virtual-environments-104c62d48c54)\n",
     "    + [The Definitive Guide to Conda Environments](https://towardsdatascience.com/a-guide-to-conda-environments-bc6180fc533)\n",
     "\n",
-    "+ We will be using a Conda environment named `fmad` for this course. To create the environment we will keep working in the terminal (make sure that you exited Python in the previous step, you must be in a regular terminal prompt for this step to work). \n",
+    "+ We will be using a Conda environment named `IAELPML` for this course. To create the environment we will keep working in the terminal (make sure that you exited Python in the previous step, you must be in a regular terminal prompt for this step to work). \n",
     "    \n",
     "+ In that prompt execute the command \n",
     "\n",
-    "    `conda create --name fmad`\n",
+    "    `conda create --name IAELPML`\n",
     "    \n",
-    "    and after some moments something like this should happen  \n",
+    "    and after some moments something like this should happen  (with IAELPML instead of fmad in the following screenshots): \n",
     "\n",
     "    <img src=\"fig/004-AnacondaEnvironmentCreate-MacOS-01.png\" width=50%/>\n",
     "    \n",
@@ -245,11 +246,12 @@
    "source": [
     "### Activate the environment   \n",
     "    \n",
-    "+ When we created the `fmad` environment in a previous step, Conda showed us the activation command:  \n",
+    "+ When we created the `IAELPML` environment in a previous step, Conda showed us the activation command:  \n",
     "\n",
-    "    `conda activate fmad`\n",
+    "\n",
+    "    `conda activate IAELPML`\n",
     "    \n",
-    "    Run this command now. This will activate the newly created environment `fmad`. Note that the name of the active environment appears in parenthesis at the beginning of the prompt line:\n",
+    "    Run this command now. This will activate the newly created environment `IAELPML`. Note that the name of the active environment appears in parenthesis at the beginning of the prompt line (again, here you will see `IAELPML` instead of `fmad`):\n",
     "\n",
     "    <img src=\"fig/004-AnacondaEnvironmentCreate03.png\" width=30%/>\n",
     "    \n",
@@ -264,9 +266,9 @@
    "source": [
     "###  Install the first library\n",
     "\n",
-    "+ The first library that we will install is [NumPy](https://numpy.org), which provides the foundation for much of the work we will doing in this course. We will discuss NumPy in coming sessions of the course. But to use it we first need to install it in our `fmad` environment. Execute this command now:\n",
+    "+ The first library that we will install is [NumPy](https://numpy.org), which provides the foundation for much of the work we will doing in this course. We will discuss NumPy in coming sessions of the course. But to use it we first need to install it in our `IAELPML` environment. Execute this command now:\n",
     "    \n",
-    "    `conda install --name fmad numpy`\n",
+    "    `conda install --name IAELPML numpy`\n",
     "    \n",
     "    A summary of the libraries that need to be downloaded for the NumPy setup will appear\n",
     "    \n",
@@ -297,7 +299,7 @@
     "\n",
     "  Take a few moments to visit the homepage for each of these libraries. \n",
     "\n",
-    "**Exercise:** install all these libraries to the `fmad` environment. To install several libraries you don't need to repeat `conda install` for each library; you can use a single install command and separate the names of the libraries with a space."
+    "**Exercise:** install all these libraries to the `IAELPML` environment. To install several libraries you don't need to repeat `conda install` for each library; you can use a single install command and separate the names of the libraries with a space."
    ]
   },
   {
@@ -307,9 +309,9 @@
    "source": [
     "### Install the Jupyter Notebook & Jupyter Lab\n",
     "\n",
-    "+ In this course we will talk to Python using the onterface provided by *Jupyter Notebooks*. The [Jupyter Project](https://jupyter.org) provides a general purpose development environment which is well suited for Python (but not limited to it). It will play a central role in our work with Python, but it installs (to the `fmad` environment) just like any other library.\n",
+    "+ In this course we will talk to Python using the onterface provided by *Jupyter Notebooks*. The [Jupyter Project](https://jupyter.org) provides a general purpose development environment which is well suited for Python (but not limited to it). It will play a central role in our work with Python, but it installs (to the `IAELPML` environment) just like any other library.\n",
     "\n",
-    "    `conda install --name fmad jupyter`\n",
+    "    `conda install --name IAELPML jupyter`\n",
     "    \n",
     "+ When the setup ends execute the following two commands in order. The first one changes your current directory to your user folder in Windows. The second command opens the Jupyter Notebook in your *default Web Browser*:  \n",
     "\n",
@@ -338,7 +340,7 @@
     "\n",
     "+ The terminal window that you used to start Jupyter should remain open during all the work session. **Be careful:** Closing it can make the server crash and you may lose part of your work.\n",
     "\n",
-    "+ Remember to make external copies of the files in `fmad2223` before modifying them.\n",
+    "+ Remember to make external copies of the files in `IAELPML` before modifying them.\n",
     "\n",
     "+ When you are done with the setup checks use the `File` menu and then `Close and Halt` the notebook. If your browser asks for confirmation that you really want to close the page: don't worry, you can safely close it.\n",
     "\n",
@@ -361,7 +363,7 @@
     "+ If we need to install the extensions, please run this command:\n",
     "\n",
     "```\n",
-    "conda install -n fmad jupyter_contrib_nbextensions\n",
+    "conda install -n IAELPML jupyter_contrib_nbextensions\n",
     "```"
    ]
   }
@@ -382,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.17"
   },
   "toc": {
    "base_numbering": 1,
