WIP 02-EDA session

--- a/02-Exploratory Data Analysis.ipynb
+++ b/02-Exploratory Data Analysis.ipynb
@@ -279,8 +279,8 @@
     "+ Excel files are frequently used as a data source in some contexts. For simple files, reading their content into a pandas DataFrame is quite straightforward. But for more complex cases things can get more complicated. However, to keep things simple here we will use a simple file containing data about 2010 train accidents in the US. You can download the file (to the data folder) using [right-click in this link](http://users.stat.ufl.edu/~winner/data/train_acc_2010.xls). And the meaning of the variables in this dataset is [clarified by this link](https://users.stat.ufl.edu/~winner/data/train_acc_2010.txt)\n",
     "\n",
     "\n",
-    "+ First we need to install an additional module into the fmad environment. This will often be the case when reading data from other sources. Do you remember how to install new modules?\n",
-    "  **Exercise:** install the module called `xlrd` into the fmad environment."
+    "+ First we need to install an additional module into the `IAELPML` environment. This will often be the case when reading data from other sources. Do you remember how to install new modules?  \n",
+    "**Exercise:** install the module called `xlrd` into the `IAELPML` environment."
    ]
   },
   {
