--- a/00-CourseIntroduction.ipynb
+++ b/00-CourseIntroduction.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e7d17116",
    "metadata": {},
@@ -21,14 +20,13 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9083b642",
    "metadata": {},
    "source": [
     "## Syllabus\n",
     "\n",
-    "+ [Available at this link](https://repositorio.comillas.edu/xmlui/bitstream/handle/11531/58917/Gu%C3%ADa%20Docente.pdf)\n",
+    "+ [Available at this link](https://repositorio.comillas.edu/xmlui/bitstream/handle/11531/80388/Guía%20Docente.pdf?sequence=1&isAllowed=y)\n",
     "\n",
     "## Contact Info\n",
     "\n",
@@ -39,7 +37,7 @@
     "\n",
     "## Moodle Site \n",
     "\n",
-    "+ Use this link [Moodle](https://sifo.comillas.edu/course/view.php?id=38584). \n",
+    "+ Use this link [Moodle (IAELPML)](https://sifo.comillas.edu/course/view.php?id=41381), [Moodle (FMAD)](https://sifo.comillas.edu/course/view.php?id=41373). \n",
     "\n",
     "\n",
     "## Course Description\n",
@@ -65,14 +63,13 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "cdf6ba00",
    "metadata": {},
    "source": [
     "## Software Setup and Previous Versions of the Code and Course Slides\n",
     "\n",
-    "+ Previous versions of this course used the R language. You can find the course slides for the last version at this [GitHub repository](https://github.com/mbdfmad/fmad2122). Python was chosen this year to meet the requirements of other courses in the MBD. But R is a very useful language to add to your data science toolbox and portfolio. We encourage you to take a look at the R material for this course \n",
+    "+ Previous versions of this course used the R language. You can find the course slides for the last version at this [GitHub repository](https://github.com/mbdfmad/fmad2122). Python was chosen recently to meet the requirements of other courses in the MBD. But R is a very useful language to add to your data science toolbox and portfolio. We encourage you to take a look at the R material for this course \n",
     "\n",
     "+ We have prepared software setup instructions for:\n",
     "    + [Windows users](01-Software_Setup_Windows_Version.ipynb)\n",
@@ -82,7 +79,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9c508e3b",
    "metadata": {},
@@ -130,12 +126,13 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "65aa5efd",
    "metadata": {},
    "source": [
     "## Course Grading\n",
+    "\n",
+    "See the syllabus for the details.\n",
     "\n",
     "+ Quizzes: 10%\n",
     "+ Final exam: 30%\n",
@@ -144,7 +141,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "966e01e9",
    "metadata": {},
@@ -153,6 +149,7 @@
     "\n",
     "+ [Python Data Science Handbook](https://jakevdp.github.io/PythonDataScienceHandbook/) Vanderplas, J. (2016) O'Reilly. Freely available online.ISBN: 978-1491912058\n",
     "+ [Python for Data Science.](https://nostarch.com/python-data-science) Vasiliev, Yuli. (2022) No Starch Press. ISBN-13: 978-1718502215 (ebook)\n",
+    "+ [An Introduction to Statistical Learning with Applications in Python.](https://link.springer.com/book/10.1007/978-3-031-38747-0) James G., Witten D., Hastie T., Tibshirani R., Taylor J. (2023), ISBN: 978-3-031-38747-0\n",
     "+ [Pandas in Action.](https://www.manning.com/books/pandas-in-action) Paskhaver, B (2021) Manning Publications Co. ISBN 978-1617297434\n",
     "+ [Hands-On Data Analysis with Pandas, Second Edition.](https://www.packtpub.com/product/hands-on-data-analysis-with-pandas-second-edition/9781800563452) Molin, S (2021)  Packt Publishing Ltd. ISBN 978-1800563452\n",
     "+ [R for Data Science.](https://r4ds.had.co.nz/index.html) Grolemund, G. and Wickham, H. (2017).  O’Reilly. Freely available online. ISBN- 13: 978-1491910399"
@@ -175,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.8.13"
   },
   "toc": {
    "base_numbering": 1,
