Update before first lecture

--- a/01a_test_your_setup.ipynb
+++ b/01a_test_your_setup.ipynb
@@ -511,7 +511,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gapminder = pd.read_csv('data/gapminder.txt', index_col = 0)\n",
+    "gapminder = pd.read_csv('./data/gapminder.txt', index_col = 0)\n",
     "print(gapminder.head())\n",
     "gdp_cap = gapminder.iloc[:, -1].tolist()\n",
     "life_exp = gapminder.iloc[:, -2].tolist()\n",
