--- a/01a_test_your_setup.ipynb
+++ b/01a_test_your_setup.ipynb
@@ -560,7 +560,7 @@
     "\n",
     "# Customizations\n",
     "plt.xscale('log')\n",
-    "plt.xlabel('GDP per Capita [in USD]')\n",
+    "plt.xlabel('GDP per Capita [in USD, log scale]')\n",
     "plt.ylabel('Life Expectancy [in years]')\n",
     "plt.title('World Development in 2007')\n",
     "plt.xticks([1000,10000,100000], ['1k','10k','100k'])\n",
@@ -612,7 +612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.4"
   },
   "toc": {
    "base_numbering": 1,
