Update 02-Exploratory Data Analysis.ipynb
Typos and minor changes to 02-EDA

--- a/02-Exploratory Data Analysis.ipynb
+++ b/02-Exploratory Data Analysis.ipynb
@@ -105,7 +105,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "movies = pd.read_csv('data/movies.csv', sep=\",\", header=0)\n",
+    "movies = pd.read_csv('./data/movies.csv', sep=\",\", header=0)\n",
     "\n",
     "print(movies.head())"
    ]
@@ -280,7 +280,7 @@
     "\n",
     "\n",
     "+ First we need to install an additional module into the `IAELPML` environment. This will often be the case when reading data from other sources. Do you remember how to install new modules?  \n",
-    "**Exercise:** install the module called `xlrd` into the `IAELPML` environment."
+    " **Exercise:** install the module called `xlrd` into the `IAELPML` environment."
    ]
   },
   {
@@ -793,7 +793,7 @@
     "## Histograms and Density Plots\n",
     "\n",
     "\n",
-    "The preceding plot is not bad, but it has some issues. The most relevant one is the fact that the *gaps* between the bars have lost utility. The division we made with cut created *consecutive intervals* qith no space between them. And this plot fails to convey that. The alternative is a classic type of plot for continuous data called the histogram. We can get it with pandas method `hist`. Here we have tweaked the result a little to improve the resulting plot:"
+    "The preceding plot is not bad, but it has some issues. The most relevant one is the fact that the *gaps* between the bars have lost utility. The division we made with `cut` created *consecutive intervals* with no space between them. And this plot fails to convey that. The alternative is a classic type of plot for continuous data called the histogram. We can get it with pandas method `hist`. Here we have tweaked the result a little to improve the resulting plot:"
    ]
   },
   {
@@ -936,7 +936,8 @@
    "source": [
     "dens_plot = sns.histplot(data = X, x = 'C', kde=True)\n",
     "dens_plot.lines[0].set_color('red')\n",
-    "dens_plot.lines[0].set_linewidth(3)"
+    "dens_plot.lines[0].set_linewidth(3)\n",
+    "dens_plot.set_xlim(-5, 5);"
    ]
   },
   {
@@ -1099,16 +1100,6 @@
     "plt.plot(x, stats.chi2.pdf(16 - x, df=6), color='red', linewidth=3, )\n",
     "getPlot = plt.title('Left Skewed', fontdict={'fontsize': 25, 'color':'red'})"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d77524eb",
-   "metadata": {
-    "hide_input": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1998,7 +1989,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.4"
   },
   "toc": {
    "base_numbering": 1,
